force-app/main/default/objects/Centre__c/Centre__c.object-meta.xml
<CustomObject>
    <label>Region</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>