force-app/main/default/objects/Centre__c/fields/Centre_CommActual__c.field-meta.xml
<CustomField>
    <fullName>Centre_CommActual__c</fullName>
    <label>Commodity Actual</label>
    <summarizedField>Team__c.Team_CommActual__c</summarizedField>
    <summaryForeignKey>Team__c.Team_Centre__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>