force-app/main/default/objects/Centre__c/fields/Centre_CommTarget__c.field-meta.xml
<CustomField>
    <fullName>Centre_CommTarget__c</fullName>
    <label>Commodity Target</label>
    <summarizedField>Team__c.Team_CommTarget__c</summarizedField>
    <summaryForeignKey>Team__c.Team_Centre__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>