force-app/main/default/objects/Centre__c/fields/Centre_CRMActual__c.field-meta.xml
<CustomField>
    <fullName>Centre_CRMActual__c</fullName>
    <label>CRM Actual</label>
    <summarizedField>Team__c.Team_CRMActual__c</summarizedField>
    <summaryForeignKey>Team__c.Team_Centre__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>