force-app/main/default/objects/Centre__c/fields/Centre_CRMTarget__c.field-meta.xml
<CustomField>
    <fullName>Centre_CRMTarget__c</fullName>
    <label>CRM Target</label>
    <summarizedField>Team__c.Team_CRMTarget__c</summarizedField>
    <summaryForeignKey>Team__c.Team_Centre__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>