force-app/main/default/objects/Centre__c/fields/Centre_Division__c.field-meta.xml
<CustomField>
    <fullName>Centre_Division__c</fullName>
    <formula>Centre_Region__r.Region_Division__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group</label>
    <type>Text</type>
</CustomField>