force-app/main/default/objects/Centre__c/fields/Centre_FXActual__c.field-meta.xml
<CustomField>
    <fullName>Centre_FXActual__c</fullName>
    <formula>Centre_FXDirectActual__c   +  Centre_FXIndirectActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>