force-app/main/default/objects/Centre__c/fields/Centre_FXDirectActual__c.field-meta.xml
<CustomField>
    <fullName>Centre_FXDirectActual__c</fullName>
    <label>FX Direct Actual</label>
    <summarizedField>Team__c.Team_FXDirectActual__c</summarizedField>
    <summaryForeignKey>Team__c.Team_Centre__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>