force-app/main/default/objects/Centre__c/fields/Centre_FXDirectTarget__c.field-meta.xml
<CustomField>
    <fullName>Centre_FXDirectTarget__c</fullName>
    <label>FX Direct Target</label>
    <summarizedField>Team__c.Team_FXDirectTarget__c</summarizedField>
    <summaryForeignKey>Team__c.Team_Centre__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>