force-app/main/default/objects/Centre__c/fields/Centre_FXIndirectActual__c.field-meta.xml
<CustomField>
    <fullName>Centre_FXIndirectActual__c</fullName>
    <label>FX Indirect Actual</label>
    <summarizedField>Team__c.Team_FXIndirectActual__c</summarizedField>
    <summaryForeignKey>Team__c.Team_Centre__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>