force-app/main/default/objects/Centre__c/fields/Centre_FXIndirectTarget__c.field-meta.xml
<CustomField>
    <fullName>Centre_FXIndirectTarget__c</fullName>
    <label>FX Indirect Target</label>
    <summarizedField>Team__c.Team_FXIndirectTarget__c</summarizedField>
    <summaryForeignKey>Team__c.Team_Centre__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>