force-app/main/default/objects/Centre__c/fields/Centre_FXRetail__c.field-meta.xml
<CustomField>
    <fullName>Centre_FXRetail__c</fullName>
    <label>FX Retail Target</label>
    <summarizedField>Team__c.Team_FXRetail__c</summarizedField>
    <summaryFilterItems>
        <field>Team__c.Team_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Team__c.Team_Centre__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>