force-app/main/default/objects/Centre__c/fields/Centre_FXTarget__c.field-meta.xml
<CustomField>
    <fullName>Centre_FXTarget__c</fullName>
    <formula>Centre_FXDirectTarget__c  +  Centre_FXIndirectTarget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>