force-app/main/default/objects/Centre__c/fields/Centre_Group__c.field-meta.xml
<CustomField>
    <fullName>Centre_Group__c</fullName>
    <formula>Centre_Region__r.Region_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank</label>
    <type>Text</type>
</CustomField>