force-app/main/default/objects/Centre__c/fields/Centre_IRRMActual__c.field-meta.xml
<CustomField>
    <fullName>Centre_IRRMActual__c</fullName>
    <label>IRRM Actual</label>
    <summarizedField>Team__c.Team_IRRMActual__c</summarizedField>
    <summaryForeignKey>Team__c.Team_Centre__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>