force-app/main/default/objects/Centre__c/fields/Centre_IRRMTarget__c.field-meta.xml
<CustomField>
    <fullName>Centre_IRRMTarget__c</fullName>
    <label>IRRM Target</label>
    <summarizedField>Team__c.Team_IRRMTarget__c</summarizedField>
    <summaryForeignKey>Team__c.Team_Centre__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>