force-app/main/default/objects/Centre__c/fields/Centre_NumberofChilds__c.field-meta.xml
<CustomField>
    <fullName>Centre_NumberofChilds__c</fullName>
    <label>Number of Childs</label>
    <summaryFilterItems>
        <field>Team__c.Team_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Team__c.Team_Centre__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>