force-app/main/default/objects/Centre__c/fields/Centre_Region__c.field-meta.xml
<CustomField>
    <fullName>Centre_Region__c</fullName>
    <label>Division</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Region is not active.</errorMessage>
        <filterItems>
            <field>Region__c.Region_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Regions</relationshipLabel>
    <relationshipName>Centres</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>