force-app/main/default/objects/Centre__c/fields/Centre_Status__c.field-meta.xml
<CustomField>
    <fullName>Centre_Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>