force-app/main/default/objects/Centre__c/validationRules/Region_Cannot_be_update_to_inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>Region_Cannot_be_update_to_inactive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Centre_NumberofChilds__c&gt;0,Text(Centre_Status__c)=&#39;Inactive&#39; )</errorConditionFormula>
    <errorMessage>Region cannot be updated to Inactive ,as it contains the Active Business Centre.</errorMessage>
</ValidationRule>